# viscm

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  environment.yml  pyproject.toml  setup.py  tests.py
.github/: release.yml
.github/workflows/: check.yml  codeql.yml  release.yml  test.yml
doc/: contributing.md
test/: conftest.py  test_editor_load.py  test_editor_loads_native.py  test_gui.py
test/data/: option_d.py
viscm/: .bez.swp  __init__.py  __main__.py  bezierbuilder.py  cli.py  gui.py  minimvc.py  viscm.py
viscm/bezierbuilder/: __init__.py  curve.py
viscm/examples/: ascconvert.py  colourmaptest.asc  colourmaptest.txt  sample_diverging.jscm  sample_diverging_continuous.jscm  sample_diverging_continuous_foreign.jscm  sample_diverging_foreign.jscm  sample_linear.jscm  sample_linear_foreign.jscm
