[project]
name = "viscm"
dynamic = ["version"]
description = "A colormap tool"
readme = "README.rst"
authors = [
  {name = "Nathaniel J. Smith", email = "njs@pobox.com"},
  {name = "Stefan van der Walt", email = "stefanv@berkeley.edu"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

requires-python = "~=3.9"
dependencies = [
  "numpy ~=1.22",
  "matplotlib ~=3.5",
  "colorspacious ~=1.1",
  "scipy ~=1.8",
]

[project.optional-dependencies]
PySide = ["PySide2 ~=5.15"]
PyQt = ["PyQt5 ~=5.15"]

[project.urls]
repository = "https://github.com/matplotlib/viscm"
# documentation = "https://viscm.readthedocs.io"

[project.license]
text = "MIT"
files = ["LICENSE"]

[project.scripts]
viscm = "viscm.cli:cli"


[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
packages = {find = {}}
package-data = {viscm = ["examples/*"]}


[tool.mypy]
python_version = "3.9"

# These libraries don't have type stubs. Mypy will see them as `Any` and not
# throw an [import] error.
[[tool.mypy.overrides]]
module = [
  "colorspacious",
  "matplotlib.*",
  "mpl_toolkits.*",
  "scipy.*",
]
ignore_missing_imports = true



[tool.black]
target-version = ["py39", "py310", "py311"]

[tool.ruff]
target-version = "py39"
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "B",
  "A",
  "C4",
  "T10",
  "RUF",
]

[tool.ruff.per-file-ignores]
"viscm/gui.py" = ["N8"]

[tool.ruff.mccabe]
max-complexity = 11
